--- a/FindProperty/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/FindProperty/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -20,6 +20,16 @@
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Input.name"></label>
+                <input asp-for="Input.name" class="form-control" />
+                <span asp-validation-for="Input.name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.dob"></label>
+                <input asp-for="Input.dob" class="form-control" />
+                <span asp-validation-for="Input.dob" class="text-danger"></span>
+            </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
     </div>
