--- a/FindProperty/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FindProperty/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,6 +27,12 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Input.role"></label>
+                <select asp-for="Input.role" asp-items="Model.roleSelect" class="form-control">
+                </select>
+                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
