--- a/FindProperty/Views/Home/Index.cshtml
+++ b/FindProperty/Views/Home/Index.cshtml
@@ -2,7 +2,53 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+
+            <img class="first-slide" src="https://www.sunwayproperty.com/images/default-source/malaysia-properties/sunway-ipoh-serene-villas---45-v2-se88fdff0572b688ca7beff000068ef51.tmb-1280x628.jpg?sfvrsn=1" alt="First slide" style="max-width:1400px;min-height:500px;" width="1400" height="550">
+            <div class="container">
+                <div class="carousel-caption text-left">
+                    <h1 style="font-weight:700;">Discover cheaper hostel</h1>
+                </div>
+            </div>
+            <div class="overlay"></div>
+        </div>
+        <div class="carousel-item">
+            <img class="second-slide" src="https://www.mahsing.com.my/files/project/property/one-lagenda/mahsing-one-lagenda-property.jpg" alt="Second slide" style="max-width:1400px;min-height:500px;" width="1400" height="550">
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1 style="font-weight:700;">Discover cheaper hostel</h1>
+                    <!-- <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> -->
+                    <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
+                </div>
+                <div class="overlay"></div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="third-slide" src="https://pix10.agoda.net/hotelImages/77443/-1/95d93db71293f4acb0502c3a50b7f6f3.jpg?s=1024x768" alt="Third slide" style="max-width:1400px;min-height:500px;" width="1400" height="550">
+            <div class="container">
+                <div class="carousel-caption text-right">
+                    <h1 style="font-weight:700;">Discover cheaper hostel</h1>
+                    <!-- <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> -->
+                    <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p> -->
+                </div>
+                <div class="overlay"></div>
+            </div>
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
+
