--- a/FindProperty/Views/Properties/Edit.cshtml
+++ b/FindProperty/Views/Properties/Edit.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    List<Agent> agents = (List<Agent>)ViewData["Agents"];
 }
 
 <h1>Edit</h1>
@@ -11,9 +12,10 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="id" />
+            <input type="hidden" asp-for="imagePath" />
             <div class="form-group">
                 <label asp-for="title" class="control-label"></label>
                 <input asp-for="title" class="form-control" />
@@ -21,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="description" class="control-label"></label>
-                <input asp-for="description" class="form-control" />
+                <textarea asp-for="description" class="form-control"></textarea>
                 <span asp-validation-for="description" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -41,7 +43,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="furnishing" class="control-label"></label>
-                <input asp-for="furnishing" class="form-control" />
+                <select asp-for="furnishing" class="form-control">
+                    <option value="">Select a Furnishing Type</option>
+                    <option value="Partially Furnised">Partially Furnished</option>
+                    <option value="Fullt Furnished">Fully Furnished</option>
+                </select>
                 <span asp-validation-for="furnishing" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -49,15 +55,20 @@
                 <input asp-for="address" class="form-control" />
                 <span asp-validation-for="address" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="status" class="control-label"></label>
-                <input asp-for="status" class="form-control" />
-                <span asp-validation-for="status" class="text-danger"></span>
+            <div class="mb-3">
+                <label asp-for="AgentId" class="control-label"></label>
+                <select asp-for="AgentId" class="form-control">
+                    <option selected value="">Select an agent</option>
+                    @foreach (var agent in agents)
+                    {
+                        <option value="@agent.AgentId">@agent.name</option>
+                    }
+                </select>
+                <span asp-validation-for="AgentId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="created_at" class="control-label"></label>
-                <input asp-for="created_at" class="form-control" />
-                <span asp-validation-for="created_at" class="text-danger"></span>
+            <div class="mb-3">
+                <label asp-for="imagePath" class="control-label"></label>
+                <input class="form-control" type="file" name="images" multiple accept="image/*" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
