--- a/FindProperty/Views/Properties/Index.cshtml
+++ b/FindProperty/Views/Properties/Index.cshtml
@@ -31,13 +31,13 @@
                             if (i == 0)
                             {
                                 <div class="carousel-item active">
-                                    <img src="@item.images[i]" class="d-block" style="height:250px">
+                                    <img src="@item.images[i]" class="d-block card-img-top" style="max-height:250px;">
                                 </div>
                             }
                             else
                             {
                                 <div class="carousel-item">
-                                    <img src="@item.images[i]" class="d-block" style="height:250px">
+                                    <img src="@item.images[i]" class="d-block card-img-top" style="max-height:250px;">
                                 </div>
                             }
                         }
