--- a/FindProperty/Views/Shared/_LoginPartial.cshtml
+++ b/FindProperty/Views/Shared/_LoginPartial.cshtml
@@ -16,10 +16,13 @@
             </form>
         </li>
 
-        @if (UserManager.GetUserAsync(User).Result.role == "Admin")
+        @if (UserManager.GetUserAsync(User).Result.role == "admin")
         {
             <li class="nav-item">
                 <a id="manage" class="nav-link text-dark" asp-controller="Properties" asp-action="Index">Properties</a>
+            </li>
+            <li class="nav-item">
+                <a id="manage" class="nav-link text-dark" asp-controller="Agents" asp-action="Index">Agents</a>
             </li>
         }
     }
