agents and property modification

--- a/FindProperty/Views/Agents/Delete.cshtml
+++ b/FindProperty/Views/Agents/Delete.cshtml
@@ -33,7 +33,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="AgentId" />
+        <input type="hidden" asp-for="AgentID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
