--- a/FindProperty/Views/Agents/Edit.cshtml
+++ b/FindProperty/Views/Agents/Edit.cshtml
@@ -13,7 +13,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="AgentId" />
+            <input type="hidden" asp-for="AgentID" />
             <div class="form-group">
                 <label asp-for="name" class="control-label"></label>
                 <input asp-for="name" class="form-control" />
