--- a/FindProperty/Views/Agents/Details.cshtml
+++ b/FindProperty/Views/Agents/Details.cshtml
@@ -32,6 +32,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.AgentId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.AgentID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
