--- a/FindProperty/Views/Agents/Index.cshtml
+++ b/FindProperty/Views/Agents/Index.cshtml
@@ -14,13 +14,13 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.profile_picture)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.phone_number)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.profile_picture)
             </th>
             <th></th>
         </tr>
@@ -29,18 +29,20 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                <div class="text-center" style="width:200px; height: 200px">
+                    <img src="@item.profile_picture" style="max-height:100%; max-width: 100%" />
+                </div>
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.phone_number)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.profile_picture)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.AgentId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.AgentId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.AgentId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.AgentID">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.AgentID">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.AgentID">Delete</a>
             </td>
         </tr>
 }
