--- a/FindProperty/Views/Properties/Details.cshtml
+++ b/FindProperty/Views/Properties/Details.cshtml
@@ -16,40 +16,41 @@
         <div class="card-body">
             <div class="mb-1">
                 <div id="@id" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="@target" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        @for (int i = 1; i < Model.images.Count; i++)
+                    <ol class="carousel-indicators">
+                        <li type="button" data-target="@target" data-slide-to="0" class="active"></li>
+                        @for (int i = 1; i < @Model.images.Count; i++)
                         {
-                            <button type="button" data-bs-target="@target" data-bs-slide-to="@i" aria-label="Slide @i+1"></button>
+                            <li type="button" data-target="@target" data-slide-to="@i"></li>
                         }
-                    </div>
-                    <div class="carousel-inner" style="color: dimgray">
-                        @for (int i = 0; i < Model.images.Count(); i++)
+                    </ol>
+                    <div class="carousel-inner" style="background-color:dimgray">
+                        @for (int i = 0; i < @Model.images.Count(); i++)
                         {
                             if (i == 0)
                             {
-                                <div class="carousel-item active">
-                                    <img src="@Model.images[i]" class="d-block" style="height:250px">
+                                <div class="carousel-item active text-center" style="height:600px">
+                                    <img src="@Model.images[i]" style="max-width: 100%; max-height: 100%;">
                                 </div>
                             }
                             else
                             {
-                                <div class="carousel-item">
-                                    <img src="@Model.images[i]" class="d-block" style="height:250px">
+                                <div class="carousel-item text-center">
+                                    <img src="@Model.images[i]" style="max-width: 100%; max-height: 100%;">
                                 </div>
                             }
                         }
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="@target" data-bs-slide="prev">
+                    <a class="carousel-control-prev" href="@target" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="@target" data-bs-slide="next">
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="@target" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
+            <h4 class="card-title my-3">@Model.type</h4>
             <h4 class="card-title my-3">RM @Model.fee</h4>
             <div class="my-3">
                 <h4 mb-1 text-muted">@Model.title</h4>
@@ -61,7 +62,7 @@
     <div class="card mb-3">
         <div class="card-body">
             <h4 class="card-title my-3">@Model.title</h4>
-            <p>@Model.description</p>
+            <p style="white-space: pre-wrap;">@Model.description</p>
         </div>
     </div>
     <div class="card mb-3">
@@ -82,6 +83,9 @@
         <div class="card-body">
             <h4>Agent</h4>
             <hr />
+            <div style="height: 100px; width: 100px;" class="text-center">
+                <img src="@Model.Agent.profile_picture" class="rounded-circle z-depth-2" style="max-height:100%; max-width: 100%" /><br />
+            </div>        
             <label>Name:</label>
             <p>@Model.Agent.name</p>
             <label>Contact Number:</label>
