--- a/FindProperty/Views/Properties/Index.cshtml
+++ b/FindProperty/Views/Properties/Index.cshtml
@@ -10,6 +10,15 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-controller="Properties" asp-action="Index" method="get">
+    <p>
+
+        @Html.DropDownList("PropertyType", "All")
+
+        Search: <input type="text" class="form-control" name="searchString" placeholder="ex: Kuala Lumpur"/>
+        <input type="submit" class="btn btn-primary" value="Filter" />
+    </p>
+</form>
 @foreach (var item in Model)
 {
     var target = "#carousel" + item.id.ToString();
