--- a/FindProperty/Views/Properties/Edit.cshtml
+++ b/FindProperty/Views/Properties/Edit.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
     List<Agent> agents = (List<Agent>)ViewData["Agents"];
+    var images = Model.images;
+    var i = 0;
 }
 
 <h1>Edit</h1>
@@ -12,7 +14,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit" enctype="multipart/form-data">
+        <form id="editForm" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="id" />
             <input type="hidden" asp-for="imagePath" />
@@ -38,12 +40,13 @@
             </div>
             <div class="mb-3">
                 <label asp-for="type" class="control-label"></label>
+                <br />
                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
                     <label class="btn btn-secondary active">
-                        <input type="radio" asp-for="type" autocomplete="off" checked> For Sale
+                        <input type="radio" asp-for="type" autocomplete="off" checked value="Sale"> For Sale
                     </label>
                     <label class="btn btn-secondary">
-                        <input type="radio" asp-for="type" autocomplete="off"> For Rent
+                        <input type="radio" asp-for="type" autocomplete="off" value="Rent"> For Rent
                     </label>
                 </div>
                 <span asp-validation-for="type" class="text-danger"></span>
@@ -89,9 +92,23 @@
             </div>
             <div class="mb-3">
                 <label asp-for="imagesFiles" class="control-label"></label>
-                <input asp-for="imagesFiles" class="form-control" type="file" multiple accept="image/*" />
+                <input asp-for="imagesFiles" class="form-control" type="file" multiple accept="image/*" onchange="uploadImage(this)" />
                 <span asp-validation-for="imagesFiles" class="text-danger"></span>
             </div>
+            <div id="imagesDiv">
+                <div id="blobImages">
+                        @foreach (var item in images)
+                        {
+                            <div id="@i" class="text-center mb-2" style="width:500px; height: 300px;">
+                                <img src="@item" style="max-height: 100%; max-width: 100%" />
+                                <button type="button" class="btn btn-danger" onclick="deleteImage('@item', '@Model.id', '@i')">Delete</button>
+                            </div>
+                            i++;
+                        }
+                </div>
+
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -103,6 +120,72 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+<script>
+    var images = [];
+    var index = "@i";
+    function uploadImage(input) {
+        for (var i = 0; i < input.files.length; i++) {
+            let file = input.files[i];
+            images.push(file);
+            var reader = new FileReader();
+            reader.onload = function (e) {
+                var image = e.target.result;
+                var name = file.name;
+                index++;
+                $("#imagesDiv").append('<div id="' + index + '" class="text-center mb-2" style="width:500px; height: 300px;">' +
+                    '<img src="' + image + '" style="max-height: 100%; max-width: 100%" />' +
+                    '<button id ="button' + index + '"type="button" class="btn btn-danger">Delete</button>' +
+                    '</div>');
+                $("#button" + index).attr("onClick", "removeImageFromList('" + name + "', "+ index+")");
+            };
+            reader.readAsDataURL(file);
+        }
+    }
+
+    $("#editForm").submit(function (event) {
+        event.preventDefault();
+        var formData = new FormData(this);
+        formData.delete("imagesFiles");
+        for (var i = 0; i < images.length; i++) {
+            formData.append("imagesFiles", images[i]);
+        }
+
+        $.ajax({
+            type: 'POST',
+            url: '',
+            headers: { "RequestVerificationToken": $('input[name="__RequestVerificationToken"]').val() },
+            processData: false,
+            contentType: false,
+            data: formData,
+            success: function (message) {
+                alert("Asd");
+            },
+        });
+    });
+
+    function deleteImage(image, id, index) {
+        $.post("../deleteImage", {
+            "image": image,
+            "id": id
+        }, function () {
+            $("#" + index).hide();
+        });
+    }
+
+    function removeImageFromList(name, index) {
+        for (var i = 0; i < images.length; i++) {
+            alert(images[i].name);
+            if (images[i].name == name) {
+                images.splice(i, 1);
+                $("#" + index).hide();
+                break;
+            }
+        }
+    }
+
+</script>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
