--- a/FindProperty/Views/Properties/Delete.cshtml
+++ b/FindProperty/Views/Properties/Delete.cshtml
@@ -9,89 +9,97 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Property</h4>
     <hr />
     @{var target = "#carousel" + Model.id.ToString();
         var id = "carousel" + Model.id.ToString(); }
-    <div class="card mb-3">
-        <div class="card-body">
-            <div class="mb-1">
-                <div id="@id" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="@target" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        @for (int i = 1; i < Model.images.Count; i++)
-                        {
-                            <button type="button" data-bs-target="@target" data-bs-slide-to="@i" aria-label="Slide @i+1"></button>
-                        }
-                    </div>
-                    <div class="carousel-inner" style="color: dimgray">
-                        @for (int i = 0; i < Model.images.Count(); i++)
-                        {
-                            if (i == 0)
-                            {
-                                <div class="carousel-item active">
-                                    <img src="@Model.images[i]" class="d-block" style="height:250px">
-                                </div>
-                            }
-                            else
-                            {
-                                <div class="carousel-item">
-                                    <img src="@Model.images[i]" class="d-block" style="height:250px">
-                                </div>
-                            }
-                        }
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="@target" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="@target" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
+    <div class="shadow rounded-sm mb-5 d-flex flex-wrap p-3">
+        <div id="@id" class="carousel slide mb-1 mr-3" data-bs-touch="false" data-bs-interval="false">
+            <ol class="carousel-indicators">
+                <li type="button" data-target="@target" data-slide-to="0" class="active"></li>
+                @for (int i = 1; i < Model.images.Count; i++)
+                {
+                    <li type="button" data-target="@target" data-slide-to="@i"></li>
+                }
+            </ol>
+            <div class="carousel-inner rounded-sm imageContainer" style="background-color:lightgray;">
+                @for (int i = 0; i < Model.images.Count(); i++)
+                {
+                    if (i == 0)
+                    {
+                        <div class="carousel-item active text-center align-middle justify-content-center imageContainer">
+                            <img src="@Model.images[i]" style="max-width: 100%; max-height: 100%;">
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="carousel-item text-center align-middle imageContainer">
+                            <img src="@Model.images[i]" style="max-width: 100%; max-height: 100%;">
+                        </div>
+                    }
+                }
             </div>
+            <a class="carousel-control-prev" href="@target" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="@target" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+        <div>
+            <h4 class="card-title my-3">@Model.type</h4>
             <h4 class="card-title my-3">RM @Model.fee</h4>
             <div class="my-3">
                 <h4 mb-1 text-muted">@Model.title</h4>
                 <h5>@Model.address</h5>
             </div>
-            <p class="card-subtitle my-3">@Model.type | Built-up : @Model.size sq. ft. | @Model.furnishing</p>
+            <p class="card-subtitle my-3">@Model.property_type | Built-up : @Model.size sq. ft. | @Model.furnishing</p>
         </div>
     </div>
-    <div class="card mb-3">
+    <div class="shadow rounded mb-5 container">
         <div class="card-body">
-            <h4 class="card-title my-3">@Model.title</h4>
-            <p>@Model.description</p>
+            <h4 class="card-title my-3">Description</h4>
+            <p style="white-space: pre-wrap;">@Model.description</p>
         </div>
     </div>
-    <div class="card mb-3">
+    <div class="shadow rounded mb-5 container">
         <div class="card-body">
             <h4>Property Details</h4>
             <hr />
-            <label>Property Type:</label>
-            <p>@Model.type</p>
-            <label>Built-up Size:</label>
-            <p>@Model.size sq. ft.</p>
-            <label>Furnshing</label>
-            <p>@Model.furnishing</p>
-            <label>Posted Date:</label>
-            <p>@Model.created_at</p>
+            <div class="row">
+                <div class="col">
+                    <label class="font-weight-bold">Property Type:</label>
+                    <p>@Model.type</p>
+                    <label class="font-weight-bold">Built-up Size:</label>
+                    <p>@Model.size sq. ft.</p>
+                </div>
+                <div class="col">
+                    <label class="font-weight-bold">Furnshing</label>
+                    <p>@Model.furnishing</p>
+                    <label class="font-weight-bold">Posted Date:</label>
+                    <p>@Model.created_at</p>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="card mb-3">
+    <div class="shadow rounded mb-5 container">
         <div class="card-body">
             <h4>Agent</h4>
             <hr />
-            <label>Name:</label>
+            <div style="height: 100px; width: 100px;" class="text-center">
+                <img src="@Model.Agent.profile_picture" class="rounded-circle z-depth-2" style="max-height:100%; max-width: 100%" /><br />
+            </div>
+            <label class="font-weight-bold">Name:</label>
             <p>@Model.Agent.name</p>
-            <label>Contact Number:</label>
+            <label class="font-weight-bold">Contact Number:</label>
             <p>@Model.Agent.phone_number</p>
         </div>
     </div>
     <form asp-action="Delete">
         <input type="hidden" asp-for="id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
