--- a/FindProperty/Views/Properties/Edit.cshtml
+++ b/FindProperty/Views/Properties/Edit.cshtml
@@ -14,7 +14,7 @@
 <hr />
 <div class="row">
     <div class="container">
-        <form id="editForm" enctype="multipart/form-data">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="id" />
             <input type="hidden" asp-for="imagePath" />
@@ -24,10 +24,18 @@
                     <input asp-for="title" class="form-control" />
                     <span asp-validation-for="title" class="text-danger"></span>
                 </div>
-                <div class="form-group col">
-                    <label asp-for="description" class="control-label"></label>
-                    <textarea asp-for="description" class="form-control"></textarea>
-                    <span asp-validation-for="description" class="text-danger"></span>
+                <div class="mb-3 col">
+                    <label asp-for="type" class="control-label"></label>
+                    <br />
+                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <label class="btn btn-secondary active">
+                            <input type="radio" asp-for="type" autocomplete="off" checked value="Sale"> For Sale
+                        </label>
+                        <label class="btn btn-secondary">
+                            <input type="radio" asp-for="type" autocomplete="off" value="Rent"> For Rent
+                        </label>
+                    </div>
+                    <span asp-validation-for="type" class="text-danger"></span>
                 </div>
             </div>
             <div class="row">
@@ -43,18 +51,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="mb-3 col">
-                    <label asp-for="type" class="control-label"></label>
-                    <br />
-                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                        <label class="btn btn-secondary active">
-                            <input type="radio" asp-for="type" autocomplete="off" checked value="Sale"> For Sale
-                        </label>
-                        <label class="btn btn-secondary">
-                            <input type="radio" asp-for="type" autocomplete="off" value="Rent"> For Rent
-                        </label>
-                    </div>
-                    <span asp-validation-for="type" class="text-danger"></span>
+                <div class="form-group col">
+                    <label asp-for="furnishing" class="control-label"></label>
+                    <select asp-for="furnishing" class="form-control">
+                        <option value="">Select a Furnishing Type</option>
+                        <option value="Partially Furnised">Partially Furnished</option>
+                        <option value="Fully Furnished">Fully Furnished</option>
+                    </select>
+                    <span asp-validation-for="furnishing" class="text-danger"></span>
                 </div>
                 <div class="mb-3 col">
                     <label asp-for="property_type" class="control-label"></label>
@@ -73,13 +77,9 @@
             </div>
             <div class="row">
                 <div class="form-group col">
-                    <label asp-for="furnishing" class="control-label"></label>
-                    <select asp-for="furnishing" class="form-control">
-                        <option value="">Select a Furnishing Type</option>
-                        <option value="Partially Furnised">Partially Furnished</option>
-                        <option value="Fully Furnished">Fully Furnished</option>
-                    </select>
-                    <span asp-validation-for="furnishing" class="text-danger"></span>
+                    <label asp-for="description" class="control-label"></label>
+                    <textarea asp-for="description" class="form-control"></textarea>
+                    <span asp-validation-for="description" class="text-danger"></span>
                 </div>
                 <div class="form-group col">
                     <label asp-for="address" class="control-label"></label>
@@ -113,7 +113,7 @@
                     {
                         <div id="@i" class="text-center mb-2" style="width:500px; height: 300px;">
                             <img src="@item" style="max-height: 100%; max-width: 100%" />
-                            <button type="button" class="btn btn-danger" onclick="deleteImage('@item', '@Model.id', '@i')"><i class="bi bi-trash"></i></button>
+                            @*<button type="button" class="btn btn-danger" onclick="deleteImage('@item', '@Model.id', '@i')"><i class="bi bi-trash"></i></button>*@
                         </div>
                         i++;
                     }
@@ -121,78 +121,95 @@
             </div>
             <div class="form-group col">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-secondary">Back to List</a>
             </div>
         </form>
     </div>
 </div>
-<div id="myImg"></div>
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 <script>
-    var images = [];
+    @*var images = [];
     var index = "@i";
+    var blobImages = JSON.parse('@Html.Raw(Json.Serialize(images))');
+
+    $(document).ready(function () {
+        var imgs = document.getElementsByTagName("img");
+        for (var i = 0; i < imgs.length; i++) {
+            images.push(getBase64Image(imgs[i]));
+            console.log(getBase64Image(imgs[i]));
+        }
+    })
+
+    function getBase64Image(img) {
+        var canvas = document.createElement("canvas");
+        canvas.width = img.width;
+        canvas.height = img.height;
+        var ctx = canvas.getContext("2d");
+        ctx.drawImage(img, 0, 0);
+        var dataURL = canvas.toDataURL("image/png");
+        return dataURL.replace(/^data:image\/(png|jpg);base64,/, "");
+    }*@
 
     function uploadImage(input) {
+        $("#blobImages").empty();
         for (var i = 0; i < input.files.length; i++) {
             let file = input.files[i];
-            images.push(file);
+            //images.push(file);
             var reader = new FileReader();
             reader.onload = function (e) {
                 var image = e.target.result;
-                var name = file.name;
-                index++;
-                $("#blobImages").append('<div id="' + index + '" class="text-center mb-2" style="width:500px; height: 300px;">' +
+                //var name = file.name;
+                //index++;
+                $("#blobImages").append('<div class="text-center mb-2" style="width:500px; height: 300px;">' +
                     '<img src="' + image + '" style="max-height: 100%; max-width: 100%" />' +
-                    '<button id ="button' + index + '"type="button" class="btn btn-danger"><i class="bi bi-trash"></i></button>' +
+                    //'<button id ="button' + index + '"type="button" class="btn btn-danger"><i class="bi bi-trash"></i></button>' +
                     '</div>');
-                $("#button" + index).attr("onClick", "removeImageFromList('" + name + "', "+ index+")");
+                //$("#button" + index).attr("onClick", "removeImageFromList('" + name + "', "+ index+")");
             };
             reader.readAsDataURL(file);
         }
     }
 
-    $("#editForm").submit(function (event) {
-        event.preventDefault();
-        var formData = new FormData(this);
-        formData.delete("imagesFiles");
-        for (var i = 0; i < images.length; i++) {
-            formData.append("imagesFiles", images[i]);
-        }
+    //$("#editForm").submit(function (event) {
+    //    event.preventDefault();
+    //    var formData = new FormData(this);
+    //    formData.delete("imagesFiles");
+    //    for (var i = 0; i < images.length; i++) {
+    //        formData.append("imagesFiles", images[i]);
+    //    }
 
-        $.ajax({
-            type: 'POST',
-            url: '',
-            headers: { "RequestVerificationToken": $('input[name="__RequestVerificationToken"]').val() },
-            processData: false,
-            contentType: false,
-            data: formData,
-            success: function (message) {
-                alert("Asd");
-            },
-        });
-    });
+    //    $.ajax({
+    //        type: 'POST',
+    //        url: '',
+    //        headers: { "RequestVerificationToken": $('input[name="__RequestVerificationToken"]').val() },
+    //        processData: false,
+    //        contentType: false,
+    //        data: formData,
+    //        success: function (message) {
+    //            alert(message);
+    //        },
+    //    });
+    //});
 
-    function deleteImage(image, id, index) {
-        $.post("../deleteImage", {
-            "image": image,
-            "id": id
-        }, function () {
-            $("#" + index).hide();
-        });
-    }
+    //function deleteImage(image, id, index) {
+    //    $.post("../deleteImage", {
+    //        "image": image,
+    //        "id": id
+    //    }, function () {
+    //        $("#" + index).hide();
+    //    });
+    //}
 
-    function removeImageFromList(name, index) {
-        for (var i = 0; i < images.length; i++) {
-            alert(images[i].name);
-            if (images[i].name == name) {
-                images.splice(i, 1);
-                $("#" + index).hide();
-                break;
-            }
-        }
-    }
+    //function removeImageFromList(name, index) {
+    //    for (var i = 0; i < images.length; i++) {
+    //        alert(images[i].name);
+    //        if (images[i].name == name) {
+    //            images.splice(i, 1);
+    //            $("#" + index).hide();
+    //            break;
+    //        }
+    //    }
+    //}
 
 </script>
 
