--- a/FindProperty/Views/Properties/Index.cshtml
+++ b/FindProperty/Views/Properties/Index.cshtml
@@ -3,16 +3,20 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var searchString = ViewData["searchString"];
+    var propertyType = ViewData["property_type"];
+    var type = ViewData["type"];
+    var properties = Model;
 }
 
-<h1>Index</h1>
+<div class="text-center">
+    <img src="https://image.freepik.com/free-vector/woman-holding-keys-from-house-sale-smiling_179970-1902.jpg" style="width: 300px" />
+    <h2>Properties</h2>
+</div>
 
-<p>
-
-</p>
-<form asp-controller="Properties" asp-action="Index" method="get">
-    <div class="container d-flex align-items-center flex-row p-5">
-        <select class="custom-select-sm mr-3" aria-label="Example select with button addon">
+<div>
+    <form asp-controller="Properties" asp-action="Index" method="get" class="d-flex justify-content-center p-5">
+        <select class="custom-select mr-3" style="width:300px">
             <option selected value="">All</option>
             @foreach (var item in ViewBag.PropertyType)
             {
@@ -20,70 +24,88 @@
             }
         </select>
         <label class="mr-1">Search:</label>
-        <input type="text" class="form-control mr-1" name="searchString" placeholder="ex: Kuala Lumpur" />
+        <input type="text" class=" form-control mr-1" name="searchString" placeholder="eg: Kuala Lumpur" />
         <input type="submit" class="btn btn-primary" value="Filter" />
-    </div>
-    <div class="d-flex flex-row-reverse my-3">
-        <a asp-action="Create" class="btn btn-primary ">Create New</a>
-    </div>
-</form>
+    </form>
+</div>
 
+<div class="d-flex my-3">
+    <form asp-action="Index" class="d-flex">
+        <input type="hidden" name="searchString" value="@searchString" />
+        <input type="hidden" name="propertyType" value="@propertyType" />
+        <select class="custom-select mr-3" onchange="this.form.submit()" name="type" id="typeSelect">
+            <option selected value="">All</option>
+            <option value="Rent">Rent</option>
+            <option value="Sale">Sale</option>
+        </select>
+        <select class="custom-select" onchange="this.form.submit()" name="sort">
+            <option selected>Sort By</option>
+            <option value="newest">Newest</option>
+            <option value="lowest price">Lowest Price</option>
+            <option value="highest price">Highest Price</option>
+            <option value="highest size">Size (high-low)</option>
+            <option value="lowest size">Size (low-high)</option>
+        </select>
+    </form>
+    <a asp-action="Create" class="btn btn-primary ml-auto">Create New</a>
+</div>
 
-@foreach (var item in Model)
-{
-    var target = "#carousel" + item.id.ToString();
-    var id = "carousel" + item.id.ToString();
-    <div class="shadow rounded-sm mb-4">
-        <div class="card-body d-flex flex-wrap">
-            <div class="mb-1">
-                <div id="@id" class="carousel slide mb-1 container" data-bs-touch="false" data-bs-interval="false">
-                    <ol class="carousel-indicators">
-                        <li type="button" data-target="@target" data-slide-to="0" class="active"></li>
-                        @for (int i = 1; i < item.images.Count; i++)
+<div id="propertyDiv">
+    @foreach (var item in properties)
+    {
+        var target = "#carousel" + item.id.ToString();
+        var id = "carousel" + item.id.ToString();
+        <div class="shadow rounded-sm mb-4 d-flex flex-wrap p-3">
+            <div id="@id" class="carousel slide mb-1 mr-3" data-bs-touch="false" data-bs-interval="false">
+                <ol class="carousel-indicators">
+                    <li type="button" data-target="@target" data-slide-to="0" class="active"></li>
+                    @for (int i = 1; i < item.images.Count; i++)
+                    {
+                        <li type="button" data-target="@target" data-slide-to="@i"></li>
+                    }
+                </ol>
+                <div class="carousel-inner rounded-sm imageContainer" style="background-color:lightgray;">
+                    @for (int i = 0; i < item.images.Count(); i++)
+                    {
+                        if (i == 0)
                         {
-                            <li type="button" data-target="@target" data-slide-to="@i"></li>
+                            <div class="carousel-item active text-center align-middle justify-content-center imageContainer">
+                                <img src="@item.images[i]" style="max-width: 100%; max-height: 100%;">
+                            </div>
                         }
-                    </ol>
-                    <div class="carousel-inner rounded-sm" style="background-color:lightgray">
-                        @for (int i = 0; i < item.images.Count(); i++)
+                        else
                         {
-                            if (i == 0)
-                            {
-                                <div class="carousel-item active text-center">
-                                    <img src="@item.images[i]" style="max-width: 100%; max-height: 100%;">
-                                </div>
-                            }
-                            else
-                            {
-                                <div class="carousel-item text-center" style="width:500px; height: 250px;">
-                                    <img src="@item.images[i]" style="max-width: 100%; max-height: 100%;">
-                                </div>
-                            }
+                            <div class="carousel-item text-center align-middle imageContainer">
+                                <img src="@item.images[i]" style="max-width: 100%; max-height: 100%;">
+                            </div>
                         }
-                    </div>
-                    <a class="carousel-control-prev" href="@target" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="@target" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                    }
                 </div>
+                <a class="carousel-control-prev" href="@target" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="@target" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
 
-                <div class="container">
-                    <h4 class="card-title my-3">@item.type</h4>
-                    <h4 class="card-title my-3">RM @item.fee</h4>
-                    <div class="my-3">
-                        <h4 mb-1 text-muted">@item.title</h4>
-                        <h5>@item.address</h5>
-                    </div>
-                    <p class="card-subtitle my-3">@item.property_type | Built-up : @item.size sq. ft. | @item.furnishing</p>
-                    <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+            <div>
+                <h4 class="card-title my-3">@item.type</h4>
+                <h4 class="card-title my-3">RM @item.fee</h4>
+                <div class="my-3">
+                    <h4 mb-1 text-muted">@item.title</h4>
+                    <h5>@item.address</h5>
                 </div>
+                <p class="card-subtitle my-3">@item.property_type | Built-up : @item.size sq. ft. | @item.furnishing</p>
+                <a asp-action="Edit" asp-route-id="@item.id" class="btn btn-primary mr-2"><i class="bi bi-pencil-square"></i> Edit</a>
+                <a asp-action="Details" asp-route-id="@item.id" class="btn btn-secondary mr-2"><i class="bi bi-info-square"></i> Details</a>
+                <a asp-action="Delete" asp-route-id="@item.id" class="btn btn-danger mr-2"><i class="bi bi-trash"></i> Delete</a>
             </div>
         </div>
-    </div>
-}
+    }
+</div>
+<script>
+    $("#typeSelect").val("@type");
+</script>
