--- a/FindProperty/Views/Shared/_Layout.cshtml
+++ b/FindProperty/Views/Shared/_Layout.cshtml
@@ -11,6 +11,36 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <style>
+        @@media (min-width: 576px) {
+            .imageContainer {
+                width: 450px;
+                height: 300px;
+            }
+        }
+
+        @@media (min-width: 768px) {
+            .imageContainer {
+                width: 450px;
+                height: 300px;
+            }
+        }
+
+        @@media (min-width: 992px) {
+            .imageContainer {
+                width: 450px;
+                height: 300px;
+            }
+        }
+
+        @@media (min-width: 1200px) {
+            .imageContainer {
+                width: 450px;
+                height: 300px;
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
