agents and service bus

--- a/FindProperty/Views/Agents/Edit.cshtml
+++ b/FindProperty/Views/Agents/Edit.cshtml
@@ -11,9 +11,10 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="AgentID" />
+            <input type="hidden" asp-for="profile_picture" />
             <div class="form-group">
                 <label asp-for="name" class="control-label"></label>
                 <input asp-for="name" class="form-control" />
@@ -25,9 +26,11 @@
                 <span asp-validation-for="phone_number" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="profile_picture" class="control-label"></label>
-                <input asp-for="profile_picture" class="form-control" />
-                <span asp-validation-for="profile_picture" class="text-danger"></span>
+                <label asp-for="profilePicture" class="control-label"></label>
+                <br />
+                <img id="preview" style="height:250px;" src="@Model.profilePreview" />
+                <input class="form-control" type="file" asp-for="profilePicture" accept="image/*" onchange="imagePreview(this)" data-val="false" />
+                <span asp-validation-for="profilePicture" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -39,7 +42,17 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
+<script>
+    function imagePreview(input) {
+        var reader = new FileReader();
+        reader.onload = function (e) {
+            // get loaded data and render thumbnail.
+            $("#preview").attr("src", e.target.result);
+        };
+        // read the image file as a data URL.
+        reader.readAsDataURL(input.files[0]);
+    }
+</script>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
