--- a/FindProperty/Views/Agents/Delete.cshtml
+++ b/FindProperty/Views/Agents/Delete.cshtml
@@ -9,32 +9,97 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Agent</h4>
+    <h4 class="text-center">Agent</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.phone_number)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.phone_number)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.profile_picture)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.profile_picture)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="AgentID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    @{if (ViewBag.errorMessage != null)
+        {
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                <strong>@ViewBag.errorMessage</strong>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        }}
+    <div class="d-flex p-4 shadow rounded">
+        <div class="text-center mr-3" style="width: 300px; height: 300px">
+            <img src="@Model.profile_picture" style="max-height:100%; max-width: 100%" />
+        </div>
+        <div>
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.name)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.name)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.phone_number)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.phone_number)
+                </dd>
+            </dl>
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="AgentID" />
+                <input type="submit" value="Delete" class="btn btn-danger" />
+                <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+            </form>
+        </div>
+
+    </div>
+    <h3 class="text-center my-5">Properties In Charged</h3>
+    @foreach (var item in Model.Properties)
+    {
+        var target = "#carousel" + item.id.ToString();
+        var id = "carousel" + item.id.ToString();
+        <div class="shadow rounded-sm mb-4 d-flex flex-wrap p-3">
+            <div id="@id" class="carousel slide mb-1 mr-3" data-bs-touch="false" data-bs-interval="false">
+                <ol class="carousel-indicators">
+                    <li type="button" data-target="@target" data-slide-to="0" class="active"></li>
+                    @for (int i = 1; i < item.images.Count; i++)
+                    {
+                        <li type="button" data-target="@target" data-slide-to="@i"></li>
+                    }
+                </ol>
+                <div class="carousel-inner rounded-sm imageContainer" style="background-color:lightgray;">
+                    @for (int i = 0; i < item.images.Count(); i++)
+                    {
+                        if (i == 0)
+                        {
+                            <div class="carousel-item active text-center align-middle justify-content-center imageContainer">
+                                <img src="@item.images[i]" style="max-width: 100%; max-height: 100%;">
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="carousel-item text-center align-middle imageContainer">
+                                <img src="@item.images[i]" style="max-width: 100%; max-height: 100%;">
+                            </div>
+                        }
+                    }
+                </div>
+                <a class="carousel-control-prev" href="@target" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="@target" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+
+            <div>
+                <h4 class="card-title my-3">@item.type</h4>
+                <h4 class="card-title my-3">RM @item.fee</h4>
+                <div class="my-3">
+                    <h4 mb-1 text-muted">@item.title</h4>
+                    <h5>@item.address</h5>
+                </div>
+                <p class="card-subtitle my-3">@item.property_type | Built-up : @item.size sq. ft. | @item.furnishing</p>
+                <a asp-controller="Properties" asp-action="Edit" asp-route-id="@item.id" class="btn btn-primary mr-2"><i class="bi bi-pencil-square"></i> Edit</a>
+                <a asp-controller="Properties" asp-action="Details" asp-route-id="@item.id" class="btn btn-secondary mr-2"><i class="bi bi-info-square"></i> Details</a>
+                <a asp-controller="Properties" asp-action="Delete" asp-route-id="@item.id" class="btn btn-danger mr-2"><i class="bi bi-trash"></i> Delete</a>
+            </div>
+        </div>
+    }
 </div>
