--- a/FindProperty/Views/Agents/Details.cshtml
+++ b/FindProperty/Views/Agents/Details.cshtml
@@ -10,28 +10,84 @@
 <div>
     <h4>Agent</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.phone_number)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.phone_number)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.profile_picture)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.profile_picture)
-        </dd>
-    </dl>
+    <div class="d-flex p-4 shadow rounded">
+        <div class="text-center mr-3" style="width: 300px; height: 300px">
+            <img src="@Model.profile_picture" style="max-height:100%; max-width: 100%" />
+        </div>
+        <div>
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.name)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.name)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.phone_number)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.phone_number)
+                </dd>
+            </dl>
+        </div>
+    </div>
+    <h3 class="text-center my-5">Properties In Charged</h3>
 </div>
+@foreach (var item in Model.Properties)
+{
+    var target = "#carousel" + item.id.ToString();
+    var id = "carousel" + item.id.ToString();
+    <div class="shadow rounded-sm mb-4 d-flex flex-wrap p-3">
+        <div id="@id" class="carousel slide mb-1 mr-3" data-bs-touch="false" data-bs-interval="false">
+            <ol class="carousel-indicators">
+                <li type="button" data-target="@target" data-slide-to="0" class="active"></li>
+                @for (int i = 1; i < item.images.Count; i++)
+                {
+                    <li type="button" data-target="@target" data-slide-to="@i"></li>
+                }
+            </ol>
+            <div class="carousel-inner rounded-sm imageContainer" style="background-color:lightgray;">
+                @for (int i = 0; i < item.images.Count(); i++)
+                {
+                    if (i == 0)
+                    {
+                        <div class="carousel-item active text-center align-middle justify-content-center imageContainer">
+                            <img src="@item.images[i]" style="max-width: 100%; max-height: 100%;">
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="carousel-item text-center align-middle imageContainer">
+                            <img src="@item.images[i]" style="max-width: 100%; max-height: 100%;">
+                        </div>
+                    }
+                }
+            </div>
+            <a class="carousel-control-prev" href="@target" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="@target" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+        <div>
+            <h4 class="card-title my-3">@item.type</h4>
+            <h4 class="card-title my-3">RM @item.fee</h4>
+            <div class="my-3">
+                <h4 mb-1 text-muted">@item.title</h4>
+                <h5>@item.address</h5>
+            </div>
+            <p class="card-subtitle my-3">@item.property_type | Built-up : @item.size sq. ft. | @item.furnishing</p>
+            <a asp-controller="Properties" asp-action="Edit" asp-route-id="@item.id" class="btn btn-primary mr-2"><i class="bi bi-pencil-square"></i> Edit</a>
+            <a asp-controller="Properties" asp-action="Details" asp-route-id="@item.id" class="btn btn-secondary mr-2"><i class="bi bi-info-square"></i> Details</a>
+            <a asp-controller="Properties" asp-action="Delete" asp-route-id="@item.id" class="btn btn-danger mr-2"><i class="bi bi-trash"></i> Delete</a>
+        </div>
+    </div>
+}
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.AgentID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.AgentID" class="btn btn-primary">Edit</a> |
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
