--- a/FindProperty/Views/Appointments/Index.cshtml
+++ b/FindProperty/Views/Appointments/Index.cshtml
@@ -6,7 +6,21 @@
 }
 
 <h1>Index</h1>
-
+@{ if (ViewBag.appointmentMessage != null)
+    {
+    <div>
+        @foreach (var item in ViewBag.appointmentMessage)
+        {
+            <div class="alert alert-info alert-dismissible fade show" role="alert">
+                @item
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        }
+    </div>
+    }
+}
 <p>
     <a asp-action="Create">Create New</a>
 </p>
