--- a/FindProperty/Views/Shared/_LoginPartial.cshtml
+++ b/FindProperty/Views/Shared/_LoginPartial.cshtml
@@ -24,15 +24,16 @@
             <li class="nav-item">
                 <a id="manage" class="nav-link text-dark" asp-controller="Agents" asp-action="Index">Agents</a>
             </li>
+            <li class="nav-item">
+                <a id="manage" class="nav-link text-dark" asp-controller="Appointments" asp-action="Index">Appointments</a>
+            </li>
         }
-        else if(UserManager.GetUserAsync(User).Result.role == "customer") { 
+        else if (UserManager.GetUserAsync(User).Result.role == "customer")
+        {
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Properties" asp-action="Search">Properties</a>
             </li>
         }
-        
-
-
     }
     else
     {
